[package]
name = "aoc-2023-rust-flupke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular-buffer = "0.1.6"
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
memoize = "0.4.2"
num-traits = "0.2.17"
rayon = "1.8.0"
